llvm/test/tools/llubi/indirectbr_invalid.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
entry:
  indirectbr ptr blockaddress(@main, %bb2), [label %exit]

bb2:
  br label %exit

exit:
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Immediate UB detected: Indirect branch on unlisted target BB.
; CHECK-NEXT: error: Execution of function 'main' failed.
